ERA001 cleanup + pyproject.toml config (7 files)
- Excluded ERA001 (commented-out code) for tests/** in pyproject.toml
- Removed dead code from 7 non-test files:
  - main_window.py: unused config imports, phase comments
  - metadata_tree/view.py: mixin reference
  - node_editor/core/__init__.py: function call
  - node_editor/core/scene.py: migration example
  - conversion_nodes.py: moved comment to inline
  - rename_nodes/__init__.py: placeholder imports/exports
  - rename_modules_area.py: spacing code
- All RET,ERA,PIE,PERF,SIM rules now pass (540 → 0 issues)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -377,8 +377,8 @@ ignore = [
 "oncutf/core/file/operations_manager.py" = ["ANN401"]  # Qt parent, dynamic cache, callback
 "oncutf/core/file/load_manager.py" = ["ANN401"]  # Qt parent, FileStore duck typing
 "oncutf/core/cache/advanced_cache_manager.py" = ["ANN401"]  # Generic cache values
-# Tests - exclude from type annotation requirements
-"tests/**/*.py" = ["ANN"]  # Test code can remain loosely typed
+# Tests - exclude from type annotation requirements and ERA001 (commented-out code)
+"tests/**/*.py" = ["ANN", "ERA001"]  # Test code can remain loosely typed, may include documented code examples
 
 [tool.ruff.lint.isort]
 force-single-line = false
