--- a/pyproject.toml
+++ b/pyproject.toml
@@ -333,7 +333,7 @@ ignore = [
     "N806",   # variable in function should be lowercase (Qt variables)
 
     # Exception handling (gradual adoption)
-    "TRY003", # avoid-specifying-long-messages-outside-exception-class (100+ violations)
+    "TRY003", # raise-vanilla-args (66 violations) - would require extracting exception messages to exception classes
 
     # Print statements (allowed in scripts/debug)
     "T201",   # print-found (intentional in CLI/debug contexts)
@@ -347,31 +347,31 @@ ignore = [
     # D107 removed - enabled (was 1 violation, now 0)
     "D203",   # 1 blank line required before class docstring (conflicts with D211)
     "D213",   # multi-line-summary-second-line (conflicts with D212)
-    "D401",   # imperative-mood (200+ violations, widespread in legacy code)
-    "D205",   # missing-blank-line-after-summary (100+ violations)
+    "D401",   # non-imperative-mood (207 violations) - requires rewriting docstrings to imperative mood
+    "D205",   # missing-blank-line-after-summary (121 violations) - requires adding blank lines in docstrings
 
-    # ANN rules - Gradual adoption
-    "ANN001", # missing-type-function-argument (427 violations)
+    # ANN rules - Gradual adoption (type annotation enforcement)
+    "ANN001", # missing-type-function-argument (435 violations) - would require extensive type annotations
     # ANN002 removed - enabled (was 8 violations, now 0)
     # ANN003 removed - enabled (was 10 violations, now 0)
-    "ANN201", # missing-return-type-undocumented-public-function (247 violations)
-    "ANN202", # missing-return-type-private-function (161 violations)
-    "ANN204", # missing-return-type-special-method (173 violations)
+    "ANN201", # missing-return-type-undocumented-public-function (247 violations) - return types required
+    "ANN202", # missing-return-type-private-function (168 violations) - private return types required
+    "ANN204", # missing-return-type-special-method (172 violations) - __init__, __str__, etc. return types
     # ANN205 removed - enabled (was 1 violation, now 0)
     # ANN206 removed - enabled (was 2 violations, now 0)
-    "ANN401", # any-type (397 violations) - will enable selectively
+    "ANN401", # any-type (358 violations) - legitimate for metadata and dynamic data handling
 
-    # Boolean trap (enforced in core/controllers/app, ignored in ui)
-    "FBT001", # boolean-positional-arg-in-function-definition
-    "FBT002", # boolean-default-value-in-function-definition
-    "FBT003", # boolean-positional-value-in-function-call
+    # Boolean trap (enforced in core/controllers/app, ignored in ui for Qt patterns)
+    "FBT001", # boolean-type-hint-positional-argument (133 violations) - UI/Qt uses boolean flags heavily
+    "FBT002", # boolean-default-value-positional-argument (110 violations) - default boolean params common in Qt
+    "FBT003", # boolean-positional-value-in-call (57 violations) - calling with boolean literals is Qt pattern
 
     # Unused arguments (ARG001 enabled for functions, others gradual)
     # ARG001 removed - enabled to catch unused function args (use _ prefix for intentional)
-    "ARG002", # unused-method-argument (Qt overrides)
-    "ARG003", # unused-class-method-argument
-    "ARG004", # unused-static-method-argument
-    "ARG005", # unused-lambda-argument
+    "ARG002", # unused-method-argument (113 violations) - Qt method overrides require matching signature
+    "ARG003", # unused-class-method-argument - Qt class factories often have unused classmethod args
+    "ARG004", # unused-static-method-argument - static methods may have compatibility args
+    "ARG005", # unused-lambda-argument - lambda compatibility patterns
 ]
 
 # Per-file ignores for scripts and utilities
