feat: add transitive Qt dependency checking to audit_boundaries
- Add BFS-based transitive dependency graph analysis
- Track full dependency chains showing how Qt leaks into pure layers
- Display chains in violation reports (e.g., core -> ui -> Qt)
- New violations: core 34 direct + 13 transitive, app 3 direct + 6 transitive
- Total violations: 56 (was 37 with only direct checks)
- Add --no-transitive flag to disable transitive checking
- Generate full report in docs/reports/qt_transitive_dependencies_20260203.txt

BREAKING: audit now shows the real picture of Qt contamination
This reveals 19 additional violations through transitive imports

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,9 @@ htmlcov/
 *.ipynb
 .ipynb_checkpoints/
 
+# Codex local config
+oncutf/.codex/
+
 # =======================================
 # IDEs / Editor folders
 # =======================================
