--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "aiofiles>=24.1.0",
     "typing_extensions>=4.0.0",
     "rawpy>=0.24.0",  # Python 3.12 wheels available from 0.24.0+
+    "watchdog>=6.0.0",  # Cross-platform filesystem monitoring
 ]
 
 [project.optional-dependencies]
