--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ psutil>=6.1.0
 aiofiles>=24.1.0
 typing_extensions>=4.0.0
 rawpy>=0.21.0
+watchdog>=6.0.0
 
 # --- Development dependencies ---
 pytest>=8.3.5
