refactor(mypy): configure watchdog ignore in pyproject.toml
Instead of inline type: ignore comments, properly configure mypy to
ignore missing imports from watchdog library (which lacks type stubs).

This is the correct architectural approach:
- Centralized configuration in pyproject.toml
- No inline suppressions scattered across codebase
- Clear documentation of third-party library type limitations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -261,6 +261,13 @@ disable_error_code = [
 ]
 
 # ============================================================
+# External libraries without type stubs
+# ============================================================
+[[tool.mypy.overrides]]
+module = "watchdog.*"
+ignore_missing_imports = true
+
+# ============================================================
 # Tests — Relaxed checking
 # ============================================================
 [[tool.mypy.overrides]]
