Convert root test scripts to proper pytest manual tests
Moved 2 integration test scripts from project root to tests/manual/:
- test_lock_file.py → tests/manual/test_single_instance_lock.py
- test_shutdown_logging.py → tests/manual/test_shutdown_sequence.py

Changes:
- Added @pytest.mark.manual decorator to both tests
- Added @pytest.mark.integration decorator for proper categorization
- Converted scripts to proper pytest test functions with assertions
- Added custom pytest marker 'manual' in pyproject.toml
- Enhanced conftest.py with automatic deselection logic:
  * Manual tests skip by default (won't run with pytest)
  * Only execute when explicitly requested with -m manual
- Created tests/manual/README.md with usage instructions

Benefits:
- Tests don't run automatically in CI/CD (prevents slow subprocess tests)
- Proper pytest integration with markers and assertions
- Clear documentation on how to run manual tests
- Maintains test quality (assertions, markers, docstrings)

Run manual tests with: pytest -v -m manual tests/manual/

All quality gates pass (ruff, mypy, pytest).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -438,7 +438,8 @@ markers = [
     "unit: marks tests as unit tests",
     "gui: marks tests that require GUI (skipped on CI)",
     "exiftool: marks tests that require exiftool",
-    "local_only: marks tests that only run in local environment"
+    "local_only: marks tests that only run in local environment",
+    "manual: marks tests for manual execution only (requires explicit marker selection)"
 ]
 filterwarnings = [
     "ignore::DeprecationWarning",
